<resources>
    <string name="app_name">SEpractice</string>
    <string name="app_prototype">App Prototype</string>
    <string name="by_team_one_se">By : Team 0 (SE Practice)</string>
    <string name="coding_android_mobile_design">Android App Development &amp; Designer</string>
    <string name="coding_website_design">Website Development &amp; Designer</string>
    <string name="coding_algorithm">Flow Chart Design &amp; Content Writer</string>
    <string name="copywriter_testing_reports">Data Collection &amp; Content Writer </string>
    <string name="ryvel_id">"201839060053 "</string>
    <string name="ryvel_name">Ryvel Timothy S.</string>
    <string name="sobuj_id">"201839060049 "</string>
    <string name="sobuj_name">Jannatunnaim Sobuj</string>
    <string name="rased_id">"201839060050 "</string>
    <string name="rased_name">MD. Rased Hasan</string>
    <string name="sifat_id">"201839060048 "</string>
    <string name="sifat_name">Mohammad S. H.</string>
    <string name="prototype_notice">This Application is a Prototype.  Some Functions May Not Available</string>
    <string name="features_nav">Features</string>
    <string name="home_nav">Home</string>
    <string name="help_nav">About</string>
    <string name="home">Home</string>
    <string name="welcome_greeting">Welcome Guest!</string>
    <string name="apps">Apps</string>
    <string name="help">About</string>
    <string name="get_latest_information">Get Latest Information</string>
    <string name="content_title">Content Title</string>
    <string name="content">Content</string>
    <string name="explore_uni">Explore University</string>
    <string name="get_yourself_registered">Get Yourself Registered</string>
    <string name="about_app_title">About This Application</string>
    <string name="about_app_details">"This application is a prototype of SWPU app that is designed for Software Engineering Practice in 2020 by Team Zero. Some functions may not work as expected, or, app maybe unstable."</string>
    <string name="app_config">Application Configuration</string>
    <string name="sdk">"Minimum SDK : API 21 Android 5.0 (Lollipop) "</string>
    <string name="app_lang">Language : Java</string>
    <string name="bug_report_title">Report a Bug</string>
    <string name="report_hint">Please type what\'s wrong</string>
    <string name="submit">"Submit "</string>
    <string name="content_title_preview">Content Title</string>
    <string name="content_date">Date</string>
    <string name="online_features_note">Online features are using Firebase Database by Google,  VPN may be needed in China</string>
    <string name="online_version">"Online Version "</string>
    <string name="login">Login</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="email_example">user@email.com</string>
    <string name="password_example">********</string>
    <string name="register_suggestion">Don\'t have an account? Sign up here</string>
    <string name="signin">Sign In</string>
    <string name="forgot_password">Forgot my Password</string>
    <string name="register">Register</string>
    <string name="username_example">Name [display inside app]</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="admin_key">Admin Key</string>
    <string name="terms_conditions"><![CDATA[Terms & Conditions]]></string>
    <string name="terms_content">"This app is still prototype, some functions may not work or unstable. When you use our services, you’re trusting us with your information. We understand this is a big responsibility and work hard to protect your information and put you in control. Share your own private data is at your own risk.  Regards : Team Zero "</string>
    <string name="sign_up">Sign up</string>
    <string name="admin_key_notice">Use admin key to login as an Admin. Leave it blank if you’re not an Admin</string>
    <string name="sign_in_suggestion">Already have an account? Sign in here</string>
    <string name="check_email_notice">Check Your Email for Authentication</string>
    <string name="thanks_notice">Thank you for helping us to test this application  - Team Zero (Software Engineering Practice) 2020</string>
    <string name="next">Next</string>
    <string name="search_title">Search Information</string>
    <string name="search_feture_note">"Look for Specific Information. Online mode required "</string>
    <string name="admin_title">Administrator</string>
    <string name="admin_feature_note">"Online mode is required. Enables you to add or modified information data. "</string>
    <string name="source">"Source : "</string>
    <string name="go_back">Go Back</string>
    <string name="add_article_title">Add Article/Information</string>
    <string name="modify_article_title">Modify Article/ Information</string>
    <string name="delete_title">"Delete Article/Information "</string>
    <string name="admin_note_1">"Give user an information, can add 1 image as a thumbnail "</string>
    <string name="admin_note_2">Change any published article or Take down any published article</string>
    <string name="search_txt_title">Search</string>
    <string name="search_hint">Type Title</string>
    <string name="content_edittitle">Content Title</string>
    <string name="choose_file">Choose Picture File</string>
    <string name="confirm_upload">Upload picture</string>
    <string name="publish_txt">Publish</string>
    <string name="information_here">Type some information here</string>
    <string name="modify_note">Please Choose File to Modify</string>
    <string name="about_uni">Explore University Info</string>
    <string name="delete_txt">Delete</string>
    <string name="mod_txt">Edit</string>
    <string name="news">News</string>
    <string name="registration">Registration</string>
    <string name="university">University</string>
    <string name="discard_cancel">Discard/ Cancel Changes</string>
    <string name="by_source">By :</string>
    <string name="about_dev">About Developer Team</string>
    <string name="website">Website Development</string>
    <string name="website_link">will update soon!</string>
</resources>
