<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">

    <TextView
        android:id="@+id/textView42"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/register"
        android:textColor="#0068AA"
        android:textSize="32sp"
        app:layout_constraintEnd_toStartOf="@+id/guideline31"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/guideline33"
        app:layout_constraintTop_toTopOf="@+id/guideline32" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline33"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="40dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline32"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.28864568" />

    <TextView
        android:id="@+id/textView40"
        android:layout_width="0dp"
        android:layout_height="29dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="70dp"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/app_prototype"
        android:textSize="24sp"
        app:autoSizeTextType="uniform"
        app:layout_constraintEnd_toStartOf="@+id/guideline31"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/guideline30"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline31"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:scrollbarFadeDuration="10"
        android:scrollbars="none"
        app:layout_constraintGuide_end="40dp" />

    <TextView
        android:id="@+id/textView49"
        android:layout_width="0dp"
        android:layout_height="17dp"
        android:fontFamily="@font/montserrat"
        android:text="@string/by_team_one_se"
        app:autoSizeTextType="uniform"
        app:layout_constraintEnd_toEndOf="@+id/textView40"
        app:layout_constraintStart_toStartOf="@+id/textView40"
        app:layout_constraintTop_toBottomOf="@+id/textView40" />

    <ImageView
        android:id="@+id/imageView8"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toStartOf="@+id/guideline30"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/guideline29"
        app:layout_constraintTop_toTopOf="@+id/textView40"
        app:srcCompat="@drawable/swpu_logo_png" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline29"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.18978103" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline30"
        android:layout_width="0dp"
        android:layout_height="17dp"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.3187348" />

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="24dp"
        android:fadeScrollbars="false"
        android:scrollbars="none"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guideline31"
        app:layout_constraintStart_toStartOf="@+id/guideline33"
        app:layout_constraintTop_toBottomOf="@+id/textView42"
        app:layout_constraintVertical_bias="0.0">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fadeScrollbars="true"
            android:scrollbarFadeDuration="10">

            <TextView
                android:id="@+id/textView43"
                android:layout_width="wrap_content"
                android:layout_height="17dp"
                android:fontFamily="@font/montserrat_bold"
                android:text="@string/email"
                app:autoSizeTextType="uniform"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView44"
                android:layout_width="wrap_content"
                android:layout_height="17dp"
                android:layout_marginTop="24dp"
                android:fontFamily="@font/montserrat_bold"
                android:text="@string/name"
                app:autoSizeTextType="uniform"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/email_register_edittext" />

            <TextView
                android:id="@+id/textView45"
                android:layout_width="wrap_content"
                android:layout_height="17dp"
                android:layout_marginTop="24dp"
                android:fontFamily="@font/montserrat_bold"
                android:text="@string/password"
                app:autoSizeTextType="uniform"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/name_register_edittext" />

            <TextView
                android:id="@+id/textView46"
                android:layout_width="wrap_content"
                android:layout_height="17dp"
                android:layout_marginTop="24dp"
                android:fontFamily="@font/montserrat_bold"
                android:text="@string/confirm_password"
                app:autoSizeTextType="uniform"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/password_register_edittext" />

            <TextView
                android:id="@+id/textView47"
                android:layout_width="wrap_content"
                android:layout_height="17dp"
                android:layout_marginTop="24dp"
                android:fontFamily="@font/montserrat_bold"
                android:text="@string/admin_key"
                app:autoSizeTextType="uniform"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/confirmpass_register_edittext" />

            <TextView
                android:id="@+id/textView48"
                android:layout_width="wrap_content"
                android:layout_height="17dp"
                android:layout_marginTop="24dp"
                android:fontFamily="@font/montserrat_bold"
                android:text="@string/terms_conditions"
                app:autoSizeTextType="uniform"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView50" />

            <EditText
                android:id="@+id/email_register_edittext"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:ems="10"
                android:fontFamily="@font/montserrat"
                android:hint="@string/email_example"
                android:inputType="textEmailAddress"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView43" />

            <EditText
                android:id="@+id/name_register_edittext"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:ems="10"
                android:fontFamily="@font/montserrat"
                android:hint="@string/username_example"
                android:inputType="textEmailAddress"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView44" />

            <EditText
                android:id="@+id/password_register_edittext"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:ems="10"
                android:hint="@string/password_example"
                android:inputType="textWebPassword"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView45" />

            <EditText
                android:id="@+id/confirmpass_register_edittext"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:ems="10"
                android:hint="@string/password_example"
                android:inputType="textWebPassword"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView46" />

            <EditText
                android:id="@+id/adminkey_register_edittext"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/password_example"
                android:inputType="textWebPassword"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView47" />

            <TextView
                android:id="@+id/textView41"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:fontFamily="@font/montserrat"
                android:justificationMode="inter_word"
                android:text="@string/terms_content"
                app:autoSizeMaxTextSize="14sp"
                app:autoSizeTextType="uniform"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/terms_checkbox"
                app:layout_constraintTop_toBottomOf="@+id/textView48" />

            <TextView
                android:id="@+id/textView50"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat"
                android:text="@string/admin_key_notice"
                app:autoSizeTextType="uniform"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/adminkey_register_edittext" />

            <CheckBox
                android:id="@+id/terms_checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView48" />

            <Button
                android:id="@+id/signin_link"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"

                android:layout_marginTop="24dp"
                android:clickable="true"
                android:fontFamily="@font/montserrat_bold"
                android:text="@string/sign_in_suggestion"
                android:textColor="#0068AA"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/sign_up_button" />

            <Button
                android:id="@+id/sign_up_button"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"

                android:layout_marginTop="24dp"
                android:background="#0068AA"
                android:clickable="true"
                android:fontFamily="@font/montserrat_bold"
                android:text="@string/sign_up"
                android:textColor="#FFFFFF"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView41" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <ImageView
        android:id="@+id/offline_notice"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_offline_nottice" />

</androidx.constraintlayout.widget.ConstraintLayout>