<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <Button
        android:id="@+id/sign_in"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"

        android:layout_marginTop="24dp"
        android:background="#0068AA"
        android:clickable="true"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/signin"
        android:textColor="#FFFFFF"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@+id/guideline28"
        app:layout_constraintEnd_toStartOf="@+id/guideline24"
        app:layout_constraintStart_toStartOf="@+id/guideline23"
        app:layout_constraintTop_toBottomOf="@+id/user_password_box"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/signuplink"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"

        android:layout_marginTop="16dp"
        android:clickable="true"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/register_suggestion"
        android:textColor="#0068AA"
        android:textSize="12sp"
        app:layout_constraintEnd_toStartOf="@+id/guideline24"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/guideline23"
        app:layout_constraintTop_toBottomOf="@+id/sign_in" />

    <Button
        android:id="@+id/forgot_button"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"

        android:layout_marginBottom="16dp"
        android:clickable="true"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/forgot_password"
        android:textColor="#AA0000"
        android:textSize="12sp"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/sign_in"
        app:layout_constraintEnd_toStartOf="@+id/guideline24"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/guideline23"
        app:layout_constraintTop_toBottomOf="@+id/user_password_box" />

    <TextView
        android:id="@+id/textView38"
        android:layout_width="wrap_content"
        android:layout_height="17dp"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/email"
        app:autoSizeTextType="uniform"
        app:layout_constraintEnd_toStartOf="@+id/guideline24"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/guideline23"
        app:layout_constraintTop_toBottomOf="@+id/textView29" />

    <TextView
        android:id="@+id/textView39"
        android:layout_width="wrap_content"
        android:layout_height="17dp"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/password"
        app:autoSizeTextType="uniform"
        app:layout_constraintEnd_toStartOf="@+id/guideline24"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/guideline23"
        app:layout_constraintTop_toBottomOf="@+id/user_email_box" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline23"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="40dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline24"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="40dp" />

    <TextView
        android:id="@+id/textView37"
        android:layout_width="0dp"
        android:layout_height="17dp"
        android:fontFamily="@font/montserrat"
        android:text="@string/by_team_one_se"
        app:autoSizeTextType="uniform"
        app:layout_constraintEnd_toEndOf="@+id/textView30"
        app:layout_constraintStart_toStartOf="@+id/textView30"
        app:layout_constraintTop_toBottomOf="@+id/textView30" />

    <TextView
        android:id="@+id/textView30"
        android:layout_width="0dp"
        android:layout_height="29dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="70dp"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/app_prototype"
        android:textSize="24sp"
        app:autoSizeTextType="uniform"
        app:layout_constraintEnd_toStartOf="@+id/guideline24"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/guideline22"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline20"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toStartOf="@+id/guideline22"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/guideline21"
        app:layout_constraintTop_toTopOf="@+id/textView30"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/swpu_logo_png" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline22"
        android:layout_width="0dp"
        android:layout_height="17dp"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.3187348" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline21"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.18978103" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline20"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.28864568" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline28"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.85" />

    <TextView
        android:id="@+id/textView29"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/login"
        android:textColor="#0068AA"
        android:textSize="32sp"
        app:layout_constraintStart_toStartOf="@+id/guideline23"
        app:layout_constraintTop_toTopOf="@+id/guideline20" />

    <EditText
        android:id="@+id/user_email_box"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:fontFamily="@font/montserrat"
        android:hint="@string/email_example"
        android:inputType="textEmailAddress"
        android:textSize="14sp"
        app:layout_constraintEnd_toStartOf="@+id/guideline24"
        app:layout_constraintStart_toStartOf="@+id/guideline23"
        app:layout_constraintTop_toBottomOf="@+id/textView38" />

    <EditText
        android:id="@+id/user_password_box"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:fontFamily="@font/montserrat"
        android:hint="@string/password_example"
        android:inputType="textWebPassword"
        android:textSize="14sp"
        app:layout_constraintEnd_toStartOf="@+id/guideline24"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/guideline23"
        app:layout_constraintTop_toBottomOf="@+id/textView39" />

    <ImageView
        android:id="@+id/online_status_icon_login"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        app:layout_constraintDimensionRatio=""
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_offline_nottice" />
</androidx.constraintlayout.widget.ConstraintLayout>